--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - hamburger.png
+    - news.png
+    - india.png
+    - new-zealand.png
+    - united-kingdom.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
