--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   webview_flutter: ^2.0.10
+  firebase_auth: ^3.0.1
+  cloud_firestore: ^2.4.0
+  firebase_storage: ^10.0.1
+  firebase_core: ^1.4.0
+  image_picker: ^0.8.3+2
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +58,7 @@ flutter:
     - india.png
     - new-zealand.png
     - united-kingdom.png
+    - foodImage.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
