--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   firebase_storage: ^10.0.1
   firebase_core: ^1.4.0
   image_picker: ^0.8.3+2
+  location: ^4.3.0
+  google_maps_flutter: ^2.0.6
+  geocode: ^1.0.1
+  firebase_messaging: ^10.0.6
+  flutter_local_notifications: ^8.1.1+2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +64,8 @@ flutter:
     - new-zealand.png
     - united-kingdom.png
     - foodImage.png
+    - map.png
+    - loader.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
