--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   geocode: ^1.0.1
   firebase_messaging: ^10.0.6
   flutter_local_notifications: ^8.1.1+2
+  razorpay_flutter: ^1.2.7
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
     - foodImage.png
     - map.png
     - loader.gif
+    - DefaultRestaurant.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
