--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_local_notifications: ^8.1.1+2
   razorpay_flutter: ^1.2.7
   connectivity: ^3.0.6
+  provider: ^6.0.0
+  lottie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,8 @@ flutter:
     - map.png
     - loader.gif
     - DefaultRestaurant.png
+    - paymentSuccess.json
+    - tick.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
